force-app/main/default/objects/Line_Item__c/fields/Actual_Size__c.field-meta.xml
<CustomField>
    <fullName>Actual_Size__c</fullName>
    <label>Actual Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>