force-app/main/default/objects/Line_Item__c/fields/Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Cost_Method__c</fullName>
    <label>Cost Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPM</fullName>
                <default>true</default>
                <label>CPM</label>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>