force-app/main/default/objects/Line_Item__c/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>