force-app/main/default/objects/Line_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>