force-app/main/default/objects/Line_Item__c/fields/Custom_Description_Audience__c.field-meta.xml
<CustomField>
    <fullName>Custom_Description_Audience__c</fullName>
    <label>Custom Description (Audience)</label>
    <type>TextArea</type>
</CustomField>