force-app/main/default/objects/Line_Item__c/fields/Custom_Description_Describer__c.field-meta.xml
<CustomField>
    <fullName>Custom_Description_Describer__c</fullName>
    <label>Custom Description (Describer)</label>
    <type>TextArea</type>
</CustomField>