force-app/main/default/objects/Line_Item__c/fields/Custom_Description_Wildcard__c.field-meta.xml
<CustomField>
    <fullName>Custom_Description_Wildcard__c</fullName>
    <label>Custom Description (Wildcard)</label>
    <type>TextArea</type>
</CustomField>