force-app/main/default/objects/Line_Item__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <type>TextArea</type>
</CustomField>