force-app/main/default/objects/Line_Item__c/fields/Flight_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Start_Date__c</fullName>
    <label>Flight Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>