force-app/main/default/objects/Line_Item__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <type>TextArea</type>
</CustomField>