force-app/main/default/objects/Line_Item__c/fields/Insertion_Order__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insertion Order</label>
    <referenceTo>Insertion_Order__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>