force-app/main/default/objects/Line_Item__c/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <label>Line Item Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>