force-app/main/default/objects/Line_Item__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>