force-app/main/default/objects/Line_Item__c/fields/Pub_Paid__c.field-meta.xml
<CustomField>
    <fullName>Pub_Paid__c</fullName>
    <label>Pub Paid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>