force-app/main/default/objects/Line_Item__c/fields/Rich_Media_In_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rich_Media_In_Rate__c</fullName>
    <label>Rich Media | In Rate?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>