force-app/main/default/objects/Line_Item__c/fields/Served_By__c.field-meta.xml
<CustomField>
    <fullName>Served_By__c</fullName>
    <label>Served By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>