force-app/main/default/objects/Line_Item__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <label>Targeting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>