force-app/main/default/objects/Line_Item__c/fields/Tracking_Size__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Size__c</fullName>
    <label>Tracking Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>