force-app/main/default/objects/Line_Item__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impressions</fullName>
                <default>true</default>
                <label>Impressions</label>
            </value>
            <value>
                <fullName>Completions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>